# ec2rightsizer

./: aws_instances.csv  main.py  pyproject.toml
