[tool.poetry]
name = "ec2analyzer"
version = "0.1.0"
description = ""
authors = ["Andrew Louis <andrew@plutocard.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.24.1"
streamlit = "^1.40.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
